--- a/sh-front-main/public/index.html
+++ b/sh-front-main/public/index.html
@@ -10,6 +10,12 @@
       content="Segundo Hogar Project. Created using React.js"
     />
     <title>Segundo Hogar</title>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/es_LA/sdk.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
