design and SEO improvement

--- a/sh-front-main/public/index.html
+++ b/sh-front-main/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Segundo Hogar Project. Created using React.js"
+      content="Segundo Hogar - Encontrá tu hogar, compartí tu alquiler, o publicá tu propiedad de forma fácil y rápida"
     />
     <title>Segundo Hogar</title>
     <script
